# CV-Generator

./: .gitignore  CV_MARKDOWN_SCHEMA.md  Makefile  README.md  generate_cv.py  pyproject.toml
examples/: cv-sample-blue.html  cv-sample-warm.html  cv-sample.html  cv-sample.md  cv-template.html
templates/: cv_template.jinja2  cv_template_blue.jinja2  cv_template_warm.jinja2
tests/: test_generate_cv.py
